<resources>
    <string name="app_name">Pokedex</string>
    <string name="title_activity_main">POKEDEX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">POKEDEX</string>
    <string name="nav_header_subtitle">Demo app</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="loading_dialog_text">Loading</string>

    <string name="menu_pokedex">Pokedex</string>
    <string name="no_pokedex">NO POKEDEX FOUND</string>

    <string name="menu_pokemon_list">Pokemons</string>
    <string name="menu_pokemon_detail">Pokemon Detail</string>
    <string name="no_pokemon">NO POKEMON FOUND</string>
    <string name="no_evolutions">No Data</string>

    <string name="unknown">Unknown</string>
    <string name="none">None</string>

    <string name="menu_move_list">Moves</string>
    <string name="move_info">Move</string>
    <string name="no_moves_found">NO MOVES FOUND</string>
    <string name="move_physical">PHYSICAL</string>
    <string name="move_special">SPECIAL</string>
    <string name="move_status">STATUS</string>

    <string name="menu_abilities">Abilities</string>
    <string name="ability_info">Ability</string>
    <string name="no_abilities_found">NO ABILITIES FOUND</string>

    <string name="menu_nature_list">Natures</string>
    <string name="nature_info">Nature</string>
    <string name="no_natures_found">NO NATURES FOUND</string>

    <string name="menu_items">Items</string>
    <string name="no_items_found">NO ITEMS FOUND</string>
    <string name="menu_item_categories">Items Categories</string>
    <string name="no_categories_items_found">NO CATEGORIES ITEMS FOUND</string>
    <string name="menu_item_detail">Item Detail</string>

    <string name="menu_berries">Berries</string>
    <string name="no_berries_found">NO BERRIES FOUND</string>

    <string name="menu_egg_groups">Egg Groups</string>
    <string name="no_egg_groups_found">NO EGG GROUPS FOUND</string>

    <string name="menu_types">Types</string>
    <string name="menu_type_info">Type Detail</string>
    <string name="no_types_found">NO TYPES FOUND</string>


    <string name="level">LEVEL:</string>
    <string name="method">METHOD:</string>
    <string name="game_description">GAME DESCRIPTION</string>
    <string name="effect">EFFECT</string>
    <string name="see_more">See more</string>
    <string name="berry_info">BERRY INFO</string>
    <string name="firmness">FIRMNESS</string>
    <string name="growth_time">GROWTH TIME</string>
    <string name="smoothness">SMOOTHNESS</string>
    <string name="berry_flavors">BERRY FLAVORS</string>
    <string name="info">INFO</string>
    <string name="accuracy">Accuracy</string>
    <string name="pp">PP</string>
    <string name="power">Power</string>
    <string name="type">Type</string>
    <string name="description">DESCRIPTION</string>
    <string name="category">CATEGORY</string>
    <string name="stat">Stat</string>
    <string name="flavor">Flavor</string>
    <string name="cost">Cost</string>
    <string name="_effect">Effect:</string>
    <string name="_effect_explanation">Effect Explanation:</string>
    <string name="held_by">HELD BY</string>
    <string name="base_exp">Base Exp.</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="base_happiness">Base Happiness:</string>
    <string name="growth_rate">Growth Rate:</string>
    <string name="habitat">Habitat:</string>
    <string name="breeding">BREEDING</string>
    <string name="abilities">ABILITIES</string>
    <string name="sprites">SPRITES</string>
    <string name="other_forms">OTHER FORMS</string>
    <string name="_trigger">Trigger:</string>
    <string name="_level">Level:</string>
    <string name="_beauty">Beauty:</string>
    <string name="_gender">Gender:</string>
    <string name="_use_item">Use Item:</string>
    <string name="_held_item">Held Item:</string>
    <string name="_know_move">Know Move:</string>
    <string name="_know_move_type">Know Move Type:</string>
    <string name="_location">Location:</string>
    <string name="_affection">Affection:</string>
    <string name="_happiness">Happiness:</string>
    <string name="_raining">Raining:</string>
    <string name="_party_member">Party Member:</string>
    <string name="_party_type">Party Type:</string>
    <string name="_time_of_the_day">Time of the day:</string>
    <string name="_turn_upside_down">Turn Upside Down:</string>
    <string name="_evolvesFrom">Evolves From:</string>
    <string name="ev">EV:</string>
    <string name="pokemon_species">Pokemon Species</string>
    <string name="defending">Defending is:</string>
    <string name="attacking">Attacking is:</string>
    <string name="very_weak">Very weak to</string>
    <string name="very_resistant">Very resistant to</string>
    <string name="immune">Immune to</string>
    <string name="super_effective">Super effective to</string>
    <string name="not_effective">Not very effective to</string>
    <string name="ineffective">Ineffective to</string>
    <string name="back_to_exit">Press back again to exit</string>
    <string name="setting_language_summary">This is a limited feature due to pokemon api</string>
    <string name="dialo_exit_app_title">Close Pokedex</string>
    <string name="dialo_exit_app_message">Are you sure you want to exit?</string>
    <string name="lower_happiness">Lower than normal</string>
    <string name="normal_happiness">Normal</string>
    <string name="high_happiness">High than normal</string>
    <string name="male_50">50%</string>
    <string name="male_100">100%</string>
    <string name="male_87">87.5%</string>
    <string name="male_25">25%</string>
    <string name="egg_groups">Egg Groups</string>
    <string name="gender_rate">Gender Rate</string>
    <string name="_hatch_counter">Hatch Counter:</string>
    <string name="hatch_counter_value">%1$d cycles (%2$d steps)</string>
    <string name="_capture_rate">Capture Rate:</string>
    <string name="capture_rate_value">%1$d (%2$.1f%% full HP with a pokeball)</string>
    <string name="genderless">Genderless</string>


    <string name="berry_potency_none">None flavor of %1$s</string>
    <string name="berry_potency_low">Low flavor of %1$s</string>
    <string name="berry_potency_medium">Medium flavor of %1$s</string>
    <string name="berry_potency_high">High flavor of %1$s</string>
    <string name="min_level">Min Level:</string>
    <string name="max_level">Max Level:</string>
    <string name="max_chance">Max Chance:</string>
    <string name="game_version">Game Version:</string>
    <string name="egg">EGG</string>
    <string name="lv">LV</string>
    <string name="tut">TUT</string>
    <string name="tm">TM</string>
    <string name="other">OTHER</string>
    <string name="all">All</string>
</resources>
