<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pokedex"
            android:icon="@drawable/ic_pokedex"
            android:title="@string/menu_pokedex" />
        <item
            android:id="@+id/nav_abilities"
            android:icon="@drawable/ic_eye"
            android:title="@string/menu_abilities" />
        <item
            android:id="@+id/nav_move_list"
            android:icon="@drawable/ic_move"
            android:title="@string/menu_move_list" />
        <item
            android:id="@+id/nav_nature_list"
            android:icon="@drawable/ic_pokeball"
            android:title="@string/menu_nature_list" />
    </group>
</menu>