<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.kronos.pokedex.ui.nature.dialog.NatureDetailViewModel" />
    </data>

    <FrameLayout
        style="@style/Widget.Pokedex.BottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor"
            android:orientation="vertical"
            tools:context=".ui.pokemon.list.PokemonListFragment">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_nature" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewNatureName"
                    style="@style/Widget.Pokedex.TextView.TextViewHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:text="@{viewModel.natureInfo.name.toUpperCase().replaceAll(`-`,` `)}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/textViewAbilityViewMore"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/drag_handle" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_3"
                android:layout_margin="@dimen/margin_5"
                android:background="@color/primary_dark" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewNatureInfoHeader"
                style="@style/Widget.Pokedex.TextView.TextViewSegmentHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewMoveInfo"
                style="@style/Widget.Pokedex.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewAbilityGameEffect">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide20"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent=".50" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide40"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="1" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewNatureStatHeader"
                        style="@style/Widget.Pokedex.TextView.TextViewNormal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin_5"
                        android:text="@string/stat"
                        android:textAlignment="textStart"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/guide20"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewNatureIncreasedStat"
                        style="@style/Widget.Pokedex.TextView.TextViewNormal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin_5"
                        android:textStyle="bold"
                        android:drawableEnd="@drawable/ic_up"
                        app:handle_increased_stat="@{viewModel.natureInfo.increasedStat}"
                        app:layout_constraintEnd_toStartOf="@+id/guide20"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textViewNatureStatHeader" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewNatureDecreasedStat"
                        style="@style/Widget.Pokedex.TextView.TextViewNormal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:textStyle="bold"
                        android:drawableEnd="@drawable/ic_down"
                        app:handle_decreased_stat="@{viewModel.natureInfo.decreasedStat}"
                        app:layout_constraintBottom_toBottomOf="@+id/textViewNatureIncreasedStat"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guide20"
                        app:layout_constraintTop_toBottomOf="@+id/textViewNatureStatHeader" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_3"
                        android:layout_margin="@dimen/margin_5"
                        android:background="@color/primary_dark"
                        app:layout_constraintEnd_toStartOf="@+id/guide20"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewNatureIncreasedStat" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewNatureFlavorHeader"
                        style="@style/Widget.Pokedex.TextView.TextViewNormal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin_10"
                        android:text="@string/flavor"
                        android:textAlignment="textStart"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/guide20"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewNatureFlavor"
                        style="@style/Widget.Pokedex.TextView.TextViewNormal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:textStyle="bold"
                        android:drawableStart="@drawable/ic_like"
                        android:drawablePadding="@dimen/margin_5"
                        app:handle_likes_flavor="@{viewModel.natureInfo.likesFlavor}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guide20"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewNatureFlavorHeader" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewNatureHatesFlavor"
                        style="@style/Widget.Pokedex.TextView.TextViewNormal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:textStyle="bold"
                        android:drawablePadding="@dimen/margin_5"
                        android:drawableStart="@drawable/ic_dislike"
                        app:handle_hates_flavor="@{viewModel.natureInfo.hatesFlavor}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guide20"
                        app:layout_constraintTop_toBottomOf="@+id/textViewNatureFlavorHeader" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>

</layout>